# optimal-transport

./: CClasses.py  LICENSE  README.md
Common/: PlotUtils.py
Documentation/: index.html
Examples/: Dense-01-Lemon.py  ShortCut-02-SparseDataStructures.ipynb  ShortCut-03-PaddingTest.ipynb  SparseSinkhorn-01-OptimalTransport.py  SparseSinkhorn-02-Barycenter.ipynb
Examples/cfg/Sinkhorn/Barycenter/: OT_simple_1-2-1.txt
Examples/cfg/Sinkhorn/CompareEnhancements/: 1.txt  2.txt  3.txt  4.txt
Examples/cfg/Sinkhorn/ImageBenchmark/: OT_256.txt
Examples/data/density-img/: f-000-064.mat  f-000-128.mat  f-001-256.mat  f-002-128.mat  f-002-256.mat  f-003-064.mat  f-003-256.mat
Examples/data/gaussians/: 128-128_000.mat
Examples/data/shapes-barycenter/: ring.mat  square.mat  three_256_010.mat  three_256_100.mat
Examples/lib/: header_common.py
OTTools/: __init__.py
OTTools/HierarchicalPartition/: CInterface.py
ScriptTools/: Experiments.py
Solvers/: compile_constants.sh  compile_cplex.sh  compile_lemon.sh  compile_sinkhorn.sh
Solvers/Common/: MergeSort.h  TCostFunctionProvider.h  TCouplingHandler.cpp  TCouplingHandler.h  THierarchicalPartitionInterface.h  TMultiVarListHandler.cpp  TVarListHandler.cpp  tools.h
Solvers/CostFunctionComputation/: CostFunctionComputation.cpp  __init__.py
Solvers/OT_CPLEX/: TCPLEXNetSolver.cpp  TCPLEXNetSolver.h  __init__.py
Solvers/OT_Lemon/: OT_Lemon.cpp
Solvers/ShortCutSolver/: ShortCutSolver-Interface.cpp  ShortCutSolver-Interface.h  ShortCutSolver-Tools.cpp  ShortCutSolver-Tools.h  TShortCutSolver.cpp  TShortCutSolver.h
Solvers/ShortCutSolver/ShieldGenerator/: TShieldGenerator.cpp
Solvers/ShortCutSolver_CPLEX/: ShortCutSolver_CPLEX.cpp  ShortCutSolver_CPLEX.h
Solvers/ShortCutSolver_Lemon/: Interfaces-Lemon.h  ShortCutSolver_Lemon.cpp  ShortCutSolver_Lemon.h  __init__.py
Solvers/Sinkhorn/: Aux.py  CInterface.py  Core.py  Sinkhorn.h  TSinkhorn.cpp  TSinkhorn.h  __init__.py
Solvers/Sinkhorn/Models/: BarycenterWF.py
v0.1.2/: LICENSE  README.md
v0.1.2/Documentation/: index.html  style.css
v0.1.2/Examples/: Dense-01-CPLEX.py  ShortCut-01-Basic-CPLEX.ipynb  ShortCut-01-Basic-Lemon.ipynb  SparseSinkhorn-01-OptimalTransport.ipynb
v0.1.2/Examples/cfg/Sinkhorn/Barycenter/: WF_three_1-2-1.txt
v0.1.2/Examples/cfg/Sinkhorn/Gaussians/: OT_128_000-001.txt  WF_128_000-001.txt
v0.1.2/Examples/cfg/Sinkhorn/ImageBenchmark/: WF_256.txt
v0.1.2/Examples/data/density-img/: f-000-256.mat  f-001-064.mat  f-001-128.mat  f-002-064.mat  f-003-128.mat
v0.1.2/Examples/data/gaussians/: 128-128_001.mat
v0.1.2/Examples/data/shapes-barycenter/: diamond.mat  three_256_001.mat
v0.1.2/Examples/lib/: header_notebook.py  header_params_Sinkhorn.py  header_rootdir.py  header_script.py
v0.1.2/OTTools/: Common.py
v0.1.2/OTTools/HierarchicalPartition/: __init__.py
v0.1.2/ScriptTools/: __init__.py
v0.1.2/Solvers/: compile_common.sh  compile_shortcut.sh
v0.1.2/Solvers/Common/: PythonTypes.h  TCostFunctionProvider-Dynamic.h  THierarchicalPartition.cpp  THierarchicalPartition.h  THierarchicalPartitionInterface.cpp  TMultiVarListHandler.h  TVarListHandler.h  tools.cpp
v0.1.2/Solvers/OT_CPLEX/: OT_CPLEX.cpp
v0.1.2/Solvers/OT_Lemon/: TLemonSolver.h  __init__.py
v0.1.2/Solvers/ShortCutSolver/: Interfaces.cpp  Interfaces.h  __init__.py
v0.1.2/Solvers/ShortCutSolver/ShieldGenerator/: TShieldGenerator.h
v0.1.2/Solvers/ShortCutSolver_CPLEX/: Interfaces-CPLEX.cpp  Interfaces-CPLEX.h  __init__.py
v0.1.2/Solvers/ShortCutSolver_Lemon/: Interfaces-Lemon.cpp
v0.1.2/Solvers/Sinkhorn/: Barycenter.py  Sinkhorn.cpp
v0.1.2/Solvers/Sinkhorn/Models/: BarycenterCommon.py  BarycenterOT.py  Common.py  OT.py  WF.py  WFLimit.py
v0.2.0/: LICENSE  README.md
v0.2.0/documentation/: index.html
v0.2.0/src/: CMakeLists.txt  Common.h  LP_CPLEX.h  LP_Lemon.h  ShortCutSolver.h  Sinkhorn.h
v0.2.0/src/Common/: CMakeLists.txt  ErrorCodes.h  GridTools.cpp  GridTools.h  MultiScaleTools.cpp  MultiScaleTools.h  PythonTypes.h  TCostFunctionProvider.h  TCouplingHandler.cpp  TCouplingHandler.h  TEpsScaling.cpp  TEpsScaling.h  THierarchicalCostFunctionProvider.cpp  THierarchicalCostFunctionProvider.h  THierarchicalPartition.cpp  THierarchicalPartition.h  THierarchyBuilder.cpp  THierarchyBuilder.h  TVarListHandler.cpp  TVarListHandler.h  Tools.cpp  Tools.h  Verbose.cpp  Verbose.h
v0.2.0/src/Common/Models/: CMakeLists.txt  Geometry_Reflector.cpp  Geometry_Reflector.h  Geometry_Sphere.cpp  Geometry_Sphere.h  OT.cpp  OT.h  TGeometry.h  WFR.cpp  WFR.h
v0.2.0/src/Examples/: CMakeLists.txt  Dense_LP.cpp  ReflectorSpherical_CPLEX.cpp  ReflectorSpherical_Sinkhorn.cpp  ShortCut.cpp  Sinkhorn_Barycenter.cpp  Sinkhorn_Standard.cpp
v0.2.0/src/LP_CPLEX/: CMakeLists.txt  Interfaces-CPLEX.cpp  Interfaces-CPLEX.h  TCPLEXNetSolver.cpp  TCPLEXNetSolver.h
v0.2.0/src/LP_Lemon/: CMakeLists.txt  Interfaces-Lemon.cpp  Interfaces-Lemon.h  TLemonSolver.cpp  TLemonSolver.h
v0.2.0/src/ShortCutSolver/: CMakeLists.txt  Interfaces.cpp  Interfaces.h  MultiScaleSolver.cpp  MultiScaleSolver.h  TShieldGenerator.cpp  TShieldGenerator.h  TShieldGenerator_Models.cpp  TShieldGenerator_Models.h  TShortCutSolver.cpp  TShortCutSolver.h
v0.2.0/src/Sinkhorn/: CMakeLists.txt  TSinkhornKernel.cpp  TSinkhornKernel.h  TSinkhornSolver.cpp  TSinkhornSolver.h  TSinkhornSolverBarycenter.cpp  TSinkhornSolverBarycenter.h
